bubba-frontend (1.2.4.15) claire; urgency=low

  * Fixed read out network config when if was down. 

 -- Tor Krill <tor@excito.com>  Thu, 10 Dec 2009 23:19:53 +0100

bubba-frontend (1.2.4.14) karmic; urgency=low

  * channels 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 30 Dec 2009 18:51:51 +0100

bubba-frontend (1.2.4.13) claire; urgency=low

  * Network manager integration.

 -- Tor Krill <tor@excito.com>  Wed, 09 Dec 2009 21:16:17 +0100

bubba-frontend (1.2.4.12) claire; urgency=low

  * Preconfigure ap with right if. 

 -- Tor Krill <tor@excito.com>  Tue, 01 Dec 2009 15:03:21 +0100

bubba-frontend (1.2.4.11) claire; urgency=low

  * Add dnsmasq modification and restart when changing lan if 

 -- Tor Krill <tor@excito.com>  Mon, 30 Nov 2009 23:24:58 +0100

bubba-frontend (1.2.4.10) claire; urgency=low

  * updating builddepends

 -- Carl Fürstenberg <carl@excito.com>  Fri, 27 Nov 2009 13:35:16 +0100

bubba-frontend (1.2.4.9) claire; urgency=low

  * Use "native" get wlan interface method 

 -- Tor Krill <tor@excito.com>  Fri, 27 Nov 2009 00:44:05 +0100

bubba-frontend (1.2.4.8) claire; urgency=high

  * Allow disk be formatted while in "red" mode
  * rewrite the raid-detection code in model disk_model function
    list_external_disks (Closes: #1069) 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 25 Nov 2009 15:02:00 +0100

bubba-frontend (1.2.4.7) claire; urgency=low

  * require apache 2.2.9 or above, also modify site script to work in new
    apache.

 -- Carl Fürstenberg <carl@excito.com>  Mon, 23 Nov 2009 14:53:20 +0100

bubba-frontend (1.2.4.6) claire; urgency=low

  * Remove hardcoded wlan0 refs in code
  * Implement get_wlanif function

 -- Tor Krill <tor@excito.com>  Thu, 19 Nov 2009 12:15:16 +0100

bubba-frontend (1.2.4.5) karmic; urgency=low

  * dev release 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 05 Nov 2009 16:51:11 +0100

bubba-frontend (1.2.4.4) claire; urgency=low

  * merge from 1.2.4 branch 
